# cs231n

./: .gitignore  Copy_of_swin_unetr_brats21_segmentation_3d.py  LICENSE  README.md  benchmark_inference_time.py  brats21_80_20.json  brats21_actual_80_20.json  eval_comprehensive.py  eval_full_benchmark.py  eval_nnunet_comprehensive.py  eval_nnunet_robustness.py  eval_nnunet_sensitivity_hd95.py  eval_sensitivity_hd95.py  farmshare_gpu_smoke_test.sbatch  make_curriculum_splits.py  merge_benchmark_results.py  modal_nnunet.py  nnUNetPlans.json  nnunet_inference_utils.py  patch_nnunet_plans.py  plot_data_efficiency.py  plot_nnunet_training.py  plot_training_figures.py  predict_nnunet_brats21.sh  prepare_brats21_nnunet.py  pyproject.toml  run_benchmark_array.sbatch  run_benchmark_merge.sbatch  run_benchmark_one.sbatch  run_brats_swin_l4.sbatch  run_curriculum_pct100.sbatch  run_curriculum_train.sbatch  run_curriculum_train_resume.sbatch  run_eval.sh  run_eval_comprehensive.sh  run_full_benchmark.sbatch  submit_benchmark_fast.sh  submit_benchmark_modalities.sh  submit_brats_swin_unetr.slurm  train_brats_l4.slurm  (+2 more)
curriculum_splits/: brats21_train_100pct.json  brats21_train_10pct.json  brats21_train_25pct.json  brats21_train_50pct.json
