[project]
name = "cs231n"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "batchgenerators>=0.25.2",
    "matplotlib>=3.7.5",
    "modal>=0.65.66",
    "monai>=1.3.2",
    "nibabel>=5.2.1",
    "nnunetv2>=2.0",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scipy>=1.10.1",
    "simpleitk>=2.5.5",
    "torch>=2.5.1",
    "torchaudio>=2.11.0",
    "torchvision>=0.20.1",
]
